--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "clsx": "^1.1.1",
     "next": "10.0.9",
+    "next-i18next": "^8.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-grid-system": "^7.1.2",
