--- a/package.json
+++ b/package.json
@@ -28,6 +28,23 @@
     "node-sass": "^5.0.0",
     "plop": "^2.7.4",
     "typed-scss-modules": "^4.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-jest-dom": "^3.8.1",
+    "eslint-plugin-jest-formatting": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-no-only-tests": "^2.4.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^3.10.2",
+    "eslint-plugin-unicorn": "^29.0.0"
   }
 }
