--- a/package.json
+++ b/package.json
@@ -24,11 +24,7 @@
   "devDependencies": {
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
-    "inquirer-directory": "^2.2.0",
-    "node-sass": "^5.0.0",
-    "plop": "^2.7.4",
-    "typed-scss-modules": "^4.1.1",
-    "typescript": "^4.2.3",
+    "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.22.0",
@@ -45,6 +41,11 @@
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.10.2",
-    "eslint-plugin-unicorn": "^29.0.0"
+    "eslint-plugin-unicorn": "^29.0.0",
+    "inquirer-directory": "^2.2.0",
+    "node-sass": "^5.0.0",
+    "plop": "^2.7.4",
+    "typed-scss-modules": "^4.1.1",
+    "typescript": "^4.2.3"
   }
 }
