--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "clsx": "^1.1.1",
     "next": "10.0.9",
     "next-i18next": "^8.2.0",
+    "prismjs": "^1.24.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-grid-system": "^7.1.2",
+    "react-simple-code-editor": "^0.11.0",
     "react-transition-group": "^4.4.1",
     "rxjs": "^6.6.6"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
+    "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
