--- a/package.json
+++ b/package.json
@@ -49,6 +49,13 @@
     "node-sass": "^5.0.0",
     "plop": "^2.7.4",
     "typed-scss-modules": "^4.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "stylelint": "^13.12.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-recommended": "^4.0.0",
+    "stylelint-no-unsupported-browser-features": "^4.1.4",
+    "stylelint-order": "^4.1.0",
+    "stylelint-prettier": "^1.2.0",
+    "stylelint-scss": "^3.19.0"
   }
 }
