--- a/package.json
+++ b/package.json
@@ -48,14 +48,15 @@
     "inquirer-directory": "^2.2.0",
     "node-sass": "^5.0.0",
     "plop": "^2.7.4",
-    "typed-scss-modules": "^4.1.1",
-    "typescript": "^4.2.3",
+    "prettier": "^2.4.1",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^4.0.0",
     "stylelint-no-unsupported-browser-features": "^4.1.4",
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.2.0",
-    "stylelint-scss": "^3.19.0"
+    "stylelint-scss": "^3.19.0",
+    "typed-scss-modules": "^4.1.1",
+    "typescript": "^4.2.3"
   }
 }
