--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,7 +3,7 @@
     "stylelint-config-recommended",
     "stylelint-config-prettier",
   ],
-  ignoreFiles: ['**/*.ts', '**/*.tsx'],
+  ignoreFiles: ['**/*.ts', '**/*.tsx', '**/*.json', '**/*.hbs', '**/*.ico', '**/*.svg'],
   "plugins": [
     "stylelint-scss",
     "stylelint-order",
