--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "plop": "plop"
   },
   "dependencies": {
+    "@solana/wallet-adapter-base": "^0.6.0",
+    "@solana/wallet-adapter-react": "^0.12.0",
+    "@solana/wallet-adapter-react-ui": "^0.4.0",
+    "@solana/wallet-adapter-wallets": "^0.10.0",
+    "@solana/web3.js": "^1.28.0",
     "clsx": "^1.1.1",
     "next": "10.0.9",
     "next-i18next": "^8.2.0",
     "prismjs": "^1.24.1",
-    "react": "17.0.1",
+    "react": "^17.0.2",
     "react-dom": "17.0.1",
     "react-grid-system": "^7.1.2",
     "react-simple-code-editor": "^0.11.0",
