--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.9",
+    "@types/react-transition-group": "^4.4.3",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.22.0",
