--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@solana/wallet-adapter-base": "^0.6.0",
-    "@solana/wallet-adapter-react": "^0.12.0",
-    "@solana/wallet-adapter-wallets": "^0.10.0",
+    "@solana/wallet-adapter-react": "0.12.5",
+    "@solana/wallet-adapter-wallets": "^0.10.1",
     "@solana/web3.js": "^1.28.0",
     "clsx": "^1.1.1",
     "next": "10.0.9",
