--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@solana/wallet-adapter-wallets": "^0.10.1",
     "@solana/web3.js": "^1.28.0",
     "clsx": "^1.1.1",
+    "highlight.js": "^11.2.0",
     "next": "10.0.9",
     "next-i18next": "^8.2.0",
-    "prismjs": "^1.24.1",
     "react": "^17.0.2",
     "react-dom": "17.0.1",
     "react-grid-system": "^7.1.2",
@@ -29,7 +29,6 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
-    "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.9",
     "@types/react-transition-group": "^4.4.3",
