--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@solana/web3.js": "^1.28.0",
     "clsx": "^1.1.1",
     "highlight.js": "^11.2.0",
+    "materialize-css": "^1.0.0-rc.2",
     "next": "10.0.9",
     "next-i18next": "^8.2.0",
     "react": "^17.0.2",
