--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -12,7 +12,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": "./",
+    "paths": {
+      "app/*": ["src/app/*"],
+      "ui/*": ["src/ui/*"],
+      "theme": ["src/theme/*"],
+      "hooks/*": ["src/hooks/*"],
+      "context/*": ["src/context/*"],
+      "layouts/*": ["src/layouts/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "**/**/*.test.ts", "**/**/*.test.tsx"]
