--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
-    "dev:debug": "next dev -p 3001 & npm run scss:class-types:watch",
+    "dev:debug": "NODE_OPTIONS='--inspect=9300' next dev -p 3001 & npm run scss:class-types:watch",
     "build": "next build",
     "start": "next start",
     "scss:class-types": "tsm 'src/**/**/*.scss' --ignore 'src/theme/*.scss' --exportType default --nameFormat none --implementation node-sass src --logLevel silent",
@@ -26,13 +26,15 @@
     "react-grid-system": "^7.1.2",
     "react-simple-code-editor": "^0.11.0",
     "react-transition-group": "^4.4.1",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "wpapi": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.9",
     "@types/react-transition-group": "^4.4.3",
+    "@types/wpapi": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.22.0",
