--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,10 @@
       "request": "attach",
       "name": "Attach by Process ID",
       "port": 9300,
-      "skipFiles": ["${workspaceRoot}/node_modules/**/*", "<node_internals>/**"]
-    }
+      "skipFiles": ["${workspaceRoot}/app/node_modules/**/*", "<node_internals>/**"],
+      "sourceMapPathOverrides": {
+        "webpack:///./*": "${workspaceRoot}/app/*",
+      }
+    },
   ]
 }
