--- a/app/package.json
+++ b/app/package.json
@@ -16,13 +16,16 @@
     "@solana/wallet-adapter-react": "0.12.5",
     "@solana/wallet-adapter-wallets": "^0.10.1",
     "@solana/web3.js": "^1.28.0",
+    "@supabase/supabase-js": "^1.28.0",
     "clsx": "^1.1.1",
+    "final-form": "^4.20.4",
     "highlight.js": "^11.2.0",
     "materialize-css": "^1.0.0-rc.2",
     "next": "10.0.9",
     "next-i18next": "^8.2.0",
     "react": "^17.0.2",
     "react-dom": "17.0.1",
+    "react-final-form": "^6.5.7",
     "react-grid-system": "^7.1.2",
     "react-simple-code-editor": "^0.11.0",
     "react-transition-group": "^4.4.1",
