--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "plop": "plop"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.12",
     "@solana/wallet-adapter-base": "^0.6.0",
     "@solana/wallet-adapter-react": "0.12.5",
     "@solana/wallet-adapter-wallets": "^0.10.1",
@@ -33,6 +34,8 @@
     "wpapi": "^1.2.2"
   },
   "devDependencies": {
+    "@googlemaps/typescript-guards": "^1.0.1",
+    "@types/google.maps": "^3.46.1",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.9",
