feat: apollo-server for business mcs #30 #39 (#40)
* feat: apollo-server for business mcs

* feat: apollo client & createBusiness mutation

* chore: removes unused args

* chore: moves business documents

* chore: removes codegen files

* chore: extends codegen commands

* chore: removes eslitn hooks

* chore: updates codegen logic

--- a/app/package.json
+++ b/app/package.json
@@ -9,15 +9,23 @@
     "start": "next start",
     "scss:class-types": "tsm 'src/**/**/*.scss' --ignore 'src/theme/*.scss' --exportType default --nameFormat none --implementation node-sass src --logLevel silent",
     "scss:class-types:watch": "npm run scss:class-types -- --watch",
-    "plop": "plop"
+    "plop": "plop",
+    "api:codegen:watch": "graphql-codegen --watch 'src/pages/api/**/resolvers/*.ts' --watch 'src/pages/api/**/schema.graphql'",
+    "api:codegen:dry": "graphql-codegen",
+    "postinstall": "npm run api:codegen:dry"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.17",
     "@googlemaps/react-wrapper": "^1.1.12",
     "@supabase/supabase-js": "^1.28.0",
+    "apollo-server-micro": "^3.5.0",
     "clsx": "^1.1.1",
     "final-form": "^4.20.4",
+    "graphql": "^16.0.1",
     "lodash": "^4.17.21",
     "materialize-css": "^1.0.0-rc.2",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "next": "10.0.9",
     "next-i18next": "^8.2.0",
     "react": "^17.0.2",
@@ -30,6 +38,14 @@
   },
   "devDependencies": {
     "@googlemaps/typescript-guards": "^1.0.1",
+    "@graphql-codegen/cli": "^2.3.0",
+    "@graphql-codegen/introspection": "^2.1.0",
+    "@graphql-codegen/schema-ast": "^2.4.0",
+    "@graphql-codegen/typescript-operations": "^2.2.0",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.1",
+    "@graphql-codegen/typescript-resolvers": "^2.4.1",
+    "@graphql-tools/graphql-file-loader": "^7.3.3",
+    "@graphql-tools/load": "^7.4.1",
     "@types/google.maps": "^3.46.1",
     "@types/lodash": "^4.14.177",
     "@types/node": "^14.14.35",
