--- a/database/package.json
+++ b/database/package.json
@@ -16,14 +16,16 @@
     "build": "build"
   },
   "dependencies": {
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.5.0"
+    "cardinal": "^2.1.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.4",
     "@types/node": "^14.11.8",
     "@types/sequelize": "^4.28.9",
     "jest": "^26.1.0",
+    "pg-hstore": "^2.3.4",
     "prettier": "^2.4.1",
     "ts-jest": "^26.1.2",
     "ts-node-dev": "^1.0.0-pre.50",
