--- a/database/tsconfig.json
+++ b/database/tsconfig.json
@@ -15,5 +15,5 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["./src/index.ts", "./src/business"]
+  "include": ["./src"]
 }
