--- a/database/package.json
+++ b/database/package.json
@@ -7,14 +7,11 @@
     "type": "git",
     "url": "https://github.com/bancosatoshi/web.git"
   },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/bancosatoshi"
-  },
   "scripts": {
     "start": "ts-node ./src",
     "start:debug": "ts-node-dev --inspect=9226 --no-notify --respawn ./src",
     "clean": "rimraf build",
-    "compile": "npm run clean && tsc",
+    "compile": "tsc",
     "publish:prepare": "npm run clean && npm run compile",
     "test": "jest"
   },
