--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@bancosatoshi/app",
   "version": "0.1.0",
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bancosatoshi/web.git"
+  },
   "scripts": {
     "dev": "next dev -p 3001",
     "dev:debug": "NODE_OPTIONS='--inspect=9300' next dev -p 3001 & npm run scss:class-types:watch",
@@ -16,6 +19,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.17",
+    "@bancosatoshi/database": "^1.0.3",
     "@googlemaps/react-wrapper": "^1.1.12",
     "@supabase/supabase-js": "^1.28.0",
     "apollo-server-micro": "^3.5.0",
@@ -34,6 +38,7 @@
     "react-grid-system": "^7.1.2",
     "react-transition-group": "^4.4.1",
     "rxjs": "^6.6.6",
+    "sequelize": "^6.12.0-alpha.1",
     "wpapi": "^1.2.2"
   },
   "devDependencies": {
@@ -52,7 +57,6 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.9",
     "@types/react-transition-group": "^4.4.3",
-    "@types/sequelize": "^4.28.10",
     "@types/wpapi": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
@@ -77,7 +81,6 @@
     "plop": "^2.7.4",
     "prettier": "^2.4.1",
     "sass-loader": "^12.3.0",
-    "sequelize": "^6.12.0-alpha.1",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^4.0.0",
