--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -23,7 +23,8 @@
       "hooks/*": ["src/hooks/*"],
       "context/*": ["src/context/*"],
       "layouts/*": ["src/layouts/*"],
-      "api/*": ["src/pages/api/*"]
+      "api/*": ["src/pages/api/*"],
+      "lib/*": ["src/lib/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
