--- a/database/package.json
+++ b/database/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "cardinal": "^2.1.1",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.0-alpha.1"
   },
