test: create transaction data for BTC invoice webhook

--- a/database/tsconfig.json
+++ b/database/tsconfig.json
@@ -6,10 +6,11 @@
     "sourceMap": true,
     "outDir": "./build",
     "rootDir": "./src",
+    "sourceRoot": "./",
     "strict": true,
     "noImplicitAny": false,
     "strictNullChecks": false,
-    "typeRoots": ["node_modules/@types"],
+    "types": ["jest", "node"],
     "esModuleInterop": true,
     "declaration": true,
     "experimentalDecorators": true,
