--- a/database/package.json
+++ b/database/package.json
@@ -24,9 +24,11 @@
     "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.9",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.11.8",
     "@types/sequelize": "^4.28.9",
+    "faker": "^5.5.3",
     "jest": "^26.1.0",
     "pg-hstore": "^2.3.4",
     "prettier": "^2.4.1",
