feat: Business Campaigns Grid (#17)
* feat(business-card): adding 'BusinessCard' component foundation

* feat(business-card): adding styles and props to business card

* fix(business-card): refactoring business markup and styles

* chore(business-campaign-card): renaming files and directory

* feat(business-campaign-card): adding refactoring of 'business-card'

* feat(lib/wordpress): adding business page content utility function

* feat(db/business): adding new fields and tests

* chore(business-campaign-card): updating types and props

* feat(campaigns-grid): adding campaigns grid base structure

* feat(api): adding graphql types and resolver for business campaigns

* chore(api): removing debug log

* feat(db/business): adding virtual fields

* chore(api): adding suggested changes

* chore(providers): adding new provider for wordpress

* chore(campaigns-grid): adding suggestions and fixes

* feat(campaigns-grid): adding toaster component

* chore: fetches active campaigns

* chore: fixes tsc errors

Co-authored-by: Gustavo Ibarra <gus@aufacicenta.com>

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -23,7 +23,8 @@
       "hooks/*": ["src/hooks/*"],
       "context/*": ["src/context/*"],
       "layouts/*": ["src/layouts/*"],
-      "api/*": ["src/pages/api/*"]
+      "api/*": ["src/pages/api/*"],
+      "providers/*": ["src/providers/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
