--- a/database/package.json
+++ b/database/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bancosatoshi/database",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "index.js",
   "license": "MIT",
   "repository": {
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "cardinal": "^2.1.1",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.0-alpha.1"
   },
