--- a/app/package.json
+++ b/app/package.json
@@ -19,10 +19,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.17",
-    "@bancosatoshi/database": "^2.0.1",
+    "@bancosatoshi/database": "^2.0.2",
     "@googlemaps/react-wrapper": "^1.1.12",
     "@supabase/supabase-js": "^1.28.0",
     "apollo-server-micro": "^3.5.0",
+    "aws-sdk": "^2.1037.0",
+    "bitcoin-units": "^0.3.0",
     "clsx": "^1.1.1",
     "final-form": "^4.20.4",
     "graphql": "^16.0.1",
