--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.17",
+    "@bancosatoshi/database": "^2.0.4",
     "@bancosatoshi/database": "^2.0.3",
     "@googlemaps/react-wrapper": "^1.1.12",
     "@supabase/supabase-js": "^1.28.0",
