--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "plop": "plop",
     "api:codegen:watch": "graphql-codegen --watch 'src/pages/api/**/resolvers/*.ts' --watch 'src/pages/api/**/schema.graphql'",
     "api:codegen:dry": "graphql-codegen",
+    "prepare": "husky install",
     "postinstall": "npm run api:codegen:dry"
   },
   "dependencies": {
@@ -94,11 +95,6 @@
     "stylelint-scss": "^3.19.0",
     "typed-scss-modules": "^4.1.1",
     "typescript": "^4.3.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "{src,cypress,storybook,scripts}/**/*.{js,jsx,ts,tsx}": [
