--- a/app/package.json
+++ b/app/package.json
@@ -60,13 +60,10 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-transition-group": "^4.4.3",
     "@types/wpapi": "^1.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
     "inquirer-directory": "^2.2.0",
     "jest": "^27.3.1",
     "node-sass": "^5.0.0",
     "plop": "^2.7.4",
-    "sass-loader": "^12.3.0",
-    "typescript": "^4.3.2"
+    "sass-loader": "^12.3.0"
   }
 }
