--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
+    "prettier": "^2.4.1",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^4.0.0",
@@ -35,8 +38,8 @@
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.2.0",
     "stylelint-scss": "^3.19.0",
-    "prettier": "^2.4.1",
-    "typed-scss-modules": "^4.1.1"
+    "typed-scss-modules": "^4.1.1",
+    "typescript": "^4.3.2"
   },
   "lint-staged": {
     "./app/{src,cypress,storybook,scripts}/**/*.{js,jsx,ts,tsx}": [
