--- a/app/package.json
+++ b/app/package.json
@@ -64,6 +64,7 @@
     "jest": "^27.3.1",
     "node-sass": "^5.0.0",
     "plop": "^2.7.4",
-    "sass-loader": "^12.3.0"
+    "sass-loader": "^12.3.0",
+    "typescript": "^4.3.2"
   }
 }
