chore: updates stylelint config

--- a/app/.stylelintrc
+++ b/app/.stylelintrc
@@ -1,15 +1,43 @@
 {
-  "extends": ["stylelint-config-recommended", "stylelint-config-prettier"],
-  "ignoreFiles": ["**/*.ts", "**/*.tsx", "**/*.json", "**/*.hbs", "**/*.ico", "**/*.svg"],
-  "plugins": ["stylelint-scss", "stylelint-order", "stylelint-no-unsupported-browser-features", "stylelint-prettier"],
+  "extends": [
+    "stylelint-config-recommended",
+    "stylelint-config-prettier"
+  ],
+  "ignoreFiles": [
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.json",
+    "**/*.hbs",
+    "**/*.ico",
+    "**/*.svg"
+  ],
+  "plugins": [
+    "stylelint-scss",
+    "stylelint-order",
+    "stylelint-no-unsupported-browser-features",
+    "stylelint-prettier"
+  ],
   "rules": {
     "prettier/prettier": true,
     "selector-class-pattern": "^[a-z]([a-z0-9-]+)?(__([a-z0-9]+-?)+)?(--([a-z0-9]+-?)+){0,2}$",
     "plugin/no-unsupported-browser-features": [
       true,
       {
-        "browsers": [">0.25%", "not dead", "not op_mini all", "not ie <=11"],
-        "ignore": ["rem", "viewport-units", "flexbox", "calc", "outline", "css3-cursors", "user-select-none"],
+        "browsers": [
+          ">0.25%",
+          "not dead",
+          "not op_mini all",
+          "not ie <=11"
+        ],
+        "ignore": [
+          "rem",
+          "viewport-units",
+          "flexbox",
+          "calc",
+          "outline",
+          "css3-cursors",
+          "user-select-none"
+        ],
         "severity": "warning"
       }
     ],
@@ -19,13 +47,17 @@
     "rule-empty-line-before": [
       "always",
       {
-        "ignore": ["first-nested"]
+        "ignore": [
+          "first-nested"
+        ]
       }
     ],
     "selector-pseudo-class-no-unknown": [
       true,
       {
-        "ignorePseudoClasses": ["global"]
+        "ignorePseudoClasses": [
+          "global"
+        ]
       }
     ],
     "block-opening-brace-space-before": "always",
@@ -37,11 +69,22 @@
     "at-rule-empty-line-before": [
       "always",
       {
-        "except": ["after-same-name", "first-nested"],
-        "ignore": ["after-comment"]
+        "except": [
+          "after-same-name",
+          "first-nested"
+        ],
+        "ignore": [
+          "after-comment"
+        ]
       }
     ],
-    "order/order": ["at-rules", "dollar-variables", "declarations", "custom-properties", "rules"],
+    "order/order": [
+      "declarations",
+      "at-rules",
+      "dollar-variables",
+      "custom-properties",
+      "rules"
+    ],
     "order/properties-order": [
       "position",
       "top",
