--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
       "prettier --list-different --write"
     ],
     "./app/src/**/*.module.scss": [
-      "stylelint --fix",
+      "stylelint --config ./app/.stylelintrc --fix",
       "tsm --ignore 'src/theme/*.scss' --exportType default --nameFormat none --implementation node-sass --aliasPrefixes./src src",
       "prettier --list-different --write",
       "git add **/*.module.scss.d.ts"
