--- a/app/package.json
+++ b/app/package.json
@@ -63,6 +63,7 @@
     "inquirer-directory": "^2.2.0",
     "jest": "^27.3.1",
     "node-sass": "^5.0.0",
+    "typed-scss-modules": "^4.1.1",
     "plop": "^2.7.4",
     "sass-loader": "^12.3.0",
     "typescript": "^4.3.2"
