--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "url": "https://github.com/bancosatoshi/web.git"
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "stylelint": "stylelint"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.20.0",
@@ -50,7 +51,7 @@
       "prettier --list-different --write"
     ],
     "./app/src/**/*.module.scss": [
-      "stylelint --fix",
+      "stylelint --config ./app/.stylelintrc --fix",
       "tsm --ignore 'src/theme/*.scss' --exportType default --nameFormat none --implementation node-sass --aliasPrefixes./src src",
       "prettier --list-different --write",
       "git add **/*.module.scss.d.ts"
